--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "falak",
-  "version": "0.1.75",
+  "version": "0.1.77",
   "preferGlobal": true,
   "bin": {
     "flk": "./framework/bin/flk"
@@ -27,6 +27,7 @@
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
     "babel-preset-minify": "^0.5.0",
+    "regenerator-runtime": "^0.13.2",
     "chalk": "^2.4.2",
     "child-process-promise": "^2.2.1",
     "chokidar": "^3.0.1",
@@ -39,7 +40,7 @@
     "socket.io-client": "^2.2.0",
     "socket.io": "^2.2.0",
     "flk-parser": "^0.1.1",
-    "flk-support": "^0.1.13",
+    "flk-support": "^0.1.16",
     "axios": "^0.19.0",
     "cli-table": "^0.3.1"
   }
