--- a/resources/content/src/common/package.json
+++ b/resources/content/src/common/package.json
@@ -3,17 +3,23 @@
     "type": "app",
     "favicon": "images/favicon.png",
     "packages": [
-        "flk-core",
+        "flk-support",
+        "flk-config",
+        "flk-application",
+        "flk-http",
+        "flk-router",
+        "flk-layout",
+        "flk-events",
         "flk-cache",
         "flk-locale",
         "flk-dom",
         "flk-form",
         "flk-user",
         "flk-random",
-        "rfs",   
-        "compass-mixins",
         "flk-endpoint-service",
         "flk-mdbootstrap",
+        "rfs",   
+        "compass-mixins",
         "flk-scss"
     ],
     "mainFiles": {
