--- a/resources/content/src/common/compiled-config.json
+++ b/resources/content/src/common/compiled-config.json
@@ -21,7 +21,6 @@
         "position": "after"
     },
     "select": {
-        "defaultOption": "please-select",
-        "using": null
+        "defaultOption": "please-select"
     }
 }
