--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-env": "^7.4.5",
     "babel-preset-minify": "^0.5.0",
     "regenerator-runtime": "^0.13.2",
+    "strip-comments": "^1.0.2",
     "chalk": "^2.4.2",
     "child-process-promise": "^2.2.1",
     "chokidar": "^3.0.1",
